fix: responsive UI problems (#5)
* fix: responsive UI problems

* fix: remove unwanted margins in mobile UI

* fix: remove blue box on anchor tags

* fix: centralize all items in mobile UI

* feat: centralize navigation buttons on mobile UI

--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    overflow-y: scroll;
 }
 
 .title{
@@ -45,5 +46,23 @@
 @media screen and (max-width: 800px) {
     .title {
         font-size: 1.6rem;
+        text-align: center;
+    }
+    .subtitle {
+        text-align: center;
+    }
+    .catalog .product-form {
+        flex-direction: column;
+        align-items: center;
+    }
+    .catalog .input-box {
+        margin-right:0;
+    }
+    .submit-btn {
+        margin-top: 1rem;
+    }
+    .catalog, .description, .feedbacks, .queries, .chatbots, .complaints {
+        padding: 0 .5rem;
+        align-items: center;
     }
 }
