--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -118,6 +118,12 @@
 }
 
 @media screen and (max-width: 800px) {
+    .col {
+        align-items: center;
+    }
+    .name-card,.intent-card {
+        width: 95%;
+    }
     .name-card .company-details {
         justify-content: center;
     }
@@ -133,7 +139,7 @@
         height: 200px !important;
     }
     .satisfaction-card {
-        margin-left: -4rem;
+        margin-left: -3rem;
         background: transparent;
         box-shadow: none;
     }
