--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -94,13 +94,17 @@
 
 @media screen and (max-width: 800px) {
     .container {
-        margin: .25rem;
+        margin: .5rem 0 0 .25rem;
     }
     .main {
+        overflow: hidden;
         justify-content: flex-start;
     }
     .main .nav {
         margin:0;
+        height: 95vh;
+        justify-content: center;
+        align-items: center;
     }
     .nav .hyperlink {
         padding: .5rem;
@@ -118,8 +122,9 @@
         fill: #03cf5d;
     }
     .main .content {
-        height: 90vh;
-        padding: 1rem .5rem;
+        height: 95vh;
+        padding: 1rem 0 0 0;
+        border-radius: 24px 0 0 0;
     }
     .footer {
         display: none;
